# raytracer

./: .gitignore  CMakeLists.txt  main.cc
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
output/: image.ppm
